updated drag placeholders style; updated scope.codeEditorSave method; updated scope.saveComponentRequest method; updated initComponents method; updated drag & drop behavior; updated connectOverlayToSortables method; updated makeSelectionSortable method to keep track of the initial sortable sender and prevent flickering; added component post type; added handle_save_component method;

--- a/assets/less/layout-admin.less
+++ b/assets/less/layout-admin.less
@@ -144,8 +144,11 @@
   border: 1px dashed @inverseColor;
 }
 .placeholder-draggable {
-  border: 1px dashed #000;
-  background: rgba(0,0,0,.2);
+  .componentUI();
+  border-style: dashed;
+  border-width: 2px;
+  background: #FAFAFA;
+  &[class*="col-"] { margin: 0; }
 }
 .ui-highlight-drops {
   @color: green;
